--- a/B4.PE1.DellobelI/B4.PE1.DellobelI/B4.PE1.DellobelI.csproj
+++ b/B4.PE1.DellobelI/B4.PE1.DellobelI/B4.PE1.DellobelI.csproj
@@ -47,6 +47,16 @@
       <DependentUpon>PictureGallery.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WikiPage.xaml.cs">
+      <DependentUpon>WikiPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WikiPageDetail.xaml.cs">
+      <DependentUpon>WikiPageDetail.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WikiPageMaster.xaml.cs">
+      <DependentUpon>WikiPageMaster.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WikiPageMenuItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
@@ -79,7 +89,28 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="images\" />
+    <EmbeddedResource Include="images\portalicon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="WikiPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="WikiPageMaster.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="WikiPageDetail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="images\petacchi.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.4.0.282\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.4.0.282\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets')" />
